Was using the wrong blue

--- a/prism-panda.scss
+++ b/prism-panda.scss
@@ -40,7 +40,7 @@ $token-operator: #FFB86C;
 $token-number: lighten(#FFB86C, 8%);
 $token-comment: #757575;
 $token-punctuation: #FF9AC1;
-$token-function: #45A9F9;
+$token-function: #6FC1FF;
 
 /* Prism Code */
 code[class*="language-"],
